CMAKE_MINIMUM_REQUIRED( VERSION 2.8.8 )

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} FILLWAVE_TEXTURE_LOADER_SOURCES)

include_directories(${FILLWAVE_PATH_INCLUDE} ${FILLWAVE_TEXTURE_LOADER_INCLUDES}
        ${FILLWAVE_TEXTURE_LOADER_INCLUDES}/external/glm
        )

add_library(textureloader SHARED ${FILLWAVE_TEXTURE_LOADER_SOURCES})
